refactor: teste com GC shenandoah